--- a/Bombay Groove/Index.html
+++ b/Bombay Groove/Index.html
@@ -5,6 +5,7 @@
     <title>Bombay Groove | Bollywood String Quartet</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
@@ -43,17 +44,18 @@
 
 <!-----Callout----->
 
-<article class="container-fluid">
+<article class="container-fluid overflow-hidden">
     <div class="callout-container-fluid">
         <div class="row">
             <div class="col-6 col-sm-12">
                 <section class="callout jumbotron text-center">
-                    <h1 class="text-uppercase">Bombay Groove</h1>
-                    <h2>Bollywood String Quartet</h2>
+                    <h1 class="jumbotron-header text-uppercase">Bombay Groove</h1>
+                    <h2 class="jumbotron-subheader d-none d-sm-block">Bollywood String Quartet</h2>
                 </section>
             </div>
         </div>
     </div>
+
 <!------./Callout----->
 
 <!------About Us-------->
@@ -61,7 +63,7 @@
     <section class="about-us">
         <div class="row">
             <div class="col-12 col-lg-4 d-md-none d-sm-none d-lg-block">
-                <h3 class="text-uppercase">Who We Are</h3>
+                <h3 class="about-us-header text-uppercase">Who We Are</h3>
                     <p>"Lorem ipsum dolor sit amet, consectetur
                      adipiscing elit, sed do eiusmod tempor incididunt
                      ut labore et dolore magna aliqua. Ut enim ad minim
@@ -70,7 +72,7 @@
             </div>
 
             <div class="col-12 col-lg-4 col-sm-6">
-                <h3 class="text-uppercase">What We Do</h3>
+                <h3 class="about-us-header text-uppercase">What We Do</h3>
                     <p>"Lorem ipsum dolor sit amet, consectetur
                      adipiscing elit, sed do eiusmod tempor incididunt
                      ut labore et dolore magna aliqua. Ut enim ad minim
@@ -79,7 +81,7 @@
             </div>
 
             <div class="col-12 col-lg-4 col-sm-6">
-                <h3 class="text-uppercase">Prices</h3>
+                <h3 class="about-us-header text-uppercase">Prices</h3>
                     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing
                      elit, sed do eiusmod tempor incididunt ut labore et dolore
                      magna aliqua. Ut enim ad minim veniam, quis nostrud 
