Font updated, size of showreel reduced

--- a/Bombay Groove/Index.html
+++ b/Bombay Groove/Index.html
@@ -94,13 +94,15 @@
 <!------./About Us-------->        
 
 <!-----Showreel----->
-     <div class="showreel-container">   
+<div class="row justify-content-md-center">
+     <div class="showreel-container col-md-6">   
         <section class="showreel">
             <div class="embed-responsive embed-responsive-4by3">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/tmgnp2eT9Mc" alt="Bombay Groove Showreel" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/tmgnp2eT9Mc" alt="Bombay Groove Showreel" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
-    </div>
+    </div>    
+</div>
 <!-----/.Showreel----->
       
            
@@ -108,7 +110,7 @@
 <div class="quotes-container">   
     <section class="quotes">
         <div class="row">
-            <h2>Quotes</h2>
+            <h2 class="quotes-header">Quotes</h2>
                 <div class="row">
                 <div class="quote lead col-12 col-lg-4 col-sm-6">
                     <p>Lorem ipsum dolor sit amet, consectetur
