--- a/Bombay Groove/Index.html
+++ b/Bombay Groove/Index.html
@@ -5,6 +5,7 @@
     <title>Bombay Groove | Bollywood String Quartet</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
@@ -87,7 +88,6 @@
                      magna aliqua. Ut enim ad minim veniam, quis nostrud 
                      exercitation ullamco laboris nisi ut aliquip ex </p>
             </div>
-
         </div>        
     </section>
 </div>
@@ -110,9 +110,9 @@
 <div class="quotes-container">   
     <section class="quotes">
         <div class="row">
-            <h2 class="quotes-header">Quotes</h2>
+            <h2 class="quotes-header text-uppercase">Quotes</h2>
                 <div class="row">
-                <div class="quote lead col-12 col-lg-4 col-sm-6">
+                <div class="quote col-12 col-lg-4 col-sm-6">
                     <p>Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit, sed do eiusmod tempor 
                     incididunt ut labore et dolore magna aliqua. 
@@ -120,7 +120,7 @@
                     <p><strong>Katherine and James, November 2019</strong></p>
                 </div> 
 
-                <div class="quote lead col-12 col-lg-4 col-sm-6">
+                <div class="quote col-12 col-lg-4 col-sm-6">
                     <p>Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit, sed do eiusmod tempor 
                     incididunt ut labore et dolore magna aliqua. 
@@ -128,7 +128,7 @@
                     <p><strong>Katherine and James, November 2019</strong></p>
                 </div> 
 
-                 <div class="quote lead col-12 col-md-4 d-md-none d-sm-none d-lg-block">
+                 <div class="quote col-12 col-md-4 d-md-none d-sm-none d-lg-block">
                     <p>Lorem ipsum dolor sit amet, consectetur
                    adipiscing elit, sed do eiusmod tempor 
                    incididunt ut labore et dolore magna aliqua. 
@@ -140,6 +140,44 @@
     </section>  
 </div>
 <!------./Quotes---->
+
+<footer class="container-fluid">
+    <div class="row justify-content-md-center">
+        <div class="col-sm-4">
+<!------        
+            <h5 class="text-uppercase">Social Media</h5>
+-------->
+            <ul class="list-inline social-links">
+                <li class="list-inline-item">
+                    <a target="_blank" href="http://www.youtube.com">
+                        <i class="fa fa-youtube" aria-hidden="true"></i>
+                        <span class="sr-only">YouTube</span>
+                    </a>    
+                </li>
+                <li class="list-inline-item">
+                    <a target="_blank" href="http://www.facebook.com">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                        <span class="sr-only">Facebook</span>
+                    </a>    
+                </li>
+                <li class="list-inline-item">
+                    <a target="_blank" href="http://www.twitter.com">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                        <span class="sr-only">Twitter</span>
+                    </a>    
+                </li>
+                <li class="list-inline-item">
+                    <a target="_blank" href="http://www.instagram.com">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                        <span class="sr-only">Instagram</span>
+                    </a>    
+                </li>
+
+
+            </ul>
+        </div>      
+    </div>
+</footer>
 
     </article>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
