Footer bar with social media icons added. Quotes and about us centralised. Hero Image size issue identified

--- a/Bombay Groove/Index.html
+++ b/Bombay Groove/Index.html
@@ -109,36 +109,41 @@
 <!-----Quotes----->
 <div class="quotes-container">   
     <section class="quotes">
-        <div class="row">
+        <div class="row justify-content-center">
             <h2 class="quotes-header text-uppercase">Quotes</h2>
-                <div class="row">
-                <div class="quote col-12 col-lg-4 col-sm-6">
-                    <p>Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit, sed do eiusmod tempor 
-                    incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation</p>
-                    <p><strong>Katherine and James, November 2019</strong></p>
-                </div> 
+                <div class="row"> 
+                    <div class="quote col-12 col-lg-4 col-sm-6">
+                        <p>"We wanted to send a quick thank you to you and the rest of the quartet
+                         for your lovely music which provided the perfect soundtrack to our wedding day. 
+                         You all looked amazing in your colourful sarees and the combination of popular 
+                         uk tracks and Bollywood hits was an ideal fit for the Indian fusion theme. We 
+                         really enjoyed the day, even if it did go by in a flash, and hope you did too. 
+                         Thank you again and best wishes for the future."</p>
+                        <p><strong><em>Mark and Rupa, July 2017.</em></strong></p>
+                    </div> 
 
-                <div class="quote col-12 col-lg-4 col-sm-6">
-                    <p>Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit, sed do eiusmod tempor 
-                    incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation</p>
-                    <p><strong>Katherine and James, November 2019</strong></p>
-                </div> 
+                        <div class="quote col-12 col-lg-4 col-sm-6">
+                        <p>"Your skill on the instruments is a joy to hear. your professionalism made 
+                        organising so easy. You set the tone. The atmosphere at our wedding was joyous and 
+                        happy and light, and that is in no small part to the pleasure you brought 
+                        all of our guests and us as our big day began. Thank you for charging our 
+                        wedding with a current of love and electricity from the get-go. 
+                        We loved hearing your music, and we love all that you did for us."</p>
+                        <p><strong><em>Mehvish and Shane, April, 2017.</em></strong></p>
+                    </div> 
 
-                 <div class="quote col-12 col-md-4 d-md-none d-sm-none d-lg-block">
-                    <p>Lorem ipsum dolor sit amet, consectetur
-                   adipiscing elit, sed do eiusmod tempor 
-                   incididunt ut labore et dolore magna aliqua. 
-                   Ut enim ad minim veniam, quis nostrud exercitation</p>
-                    <p><strong>Katherine and James, November 2019</strong></p>
-                </div>            
+                    <div class="quote col-12 col-md-4 d-md-none d-sm-none d-lg-block">
+                        <p>Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit, sed do eiusmod tempor 
+                        incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud exercitation</p>
+                        <p><strong><em>Katherine and James, November 2019</em></strong></p>
+                    </div>            
+                </div>
             </div>
-        </div>
     </section>  
 </div>
+
 <!------./Quotes---->
 
 <footer class="container-fluid">
@@ -149,13 +154,13 @@
 -------->
             <ul class="list-inline social-links">
                 <li class="list-inline-item">
-                    <a target="_blank" href="http://www.youtube.com">
+                    <a target="_blank" href="https://www.youtube.com/channel/UCsIssCZNQNK2_3W4ScGxizQ">
                         <i class="fa fa-youtube" aria-hidden="true"></i>
                         <span class="sr-only">YouTube</span>
                     </a>    
                 </li>
                 <li class="list-inline-item">
-                    <a target="_blank" href="http://www.facebook.com">
+                    <a target="_blank" href="https://www.facebook.com/BombayGroove/">
                         <i class="fa fa-facebook" aria-hidden="true"></i>
                         <span class="sr-only">Facebook</span>
                     </a>    
