changing images for responsive design

--- a/Bombay Groove/Index.html
+++ b/Bombay Groove/Index.html
@@ -42,16 +42,15 @@
 </nav>
 </div>
 
-
 <!-----Callout----->
 
 <article class="container-fluid overflow-hidden">
     <div class="callout-container-fluid">
         <div class="row">
-            <div class="col-6 col-sm-12">
+            <div class="col-12">
                 <section class="callout jumbotron text-center">
                     <h1 class="jumbotron-header text-uppercase">Bombay Groove</h1>
-                    <h2 class="jumbotron-subheader d-none d-sm-block">Bollywood String Quartet</h2>
+                    <h2 class="jumbotron-subheader">Bollywood String Quartet</h2>
                 </section>
             </div>
         </div>
@@ -147,8 +146,8 @@
 <!------./Quotes---->
 
 <footer class="container-fluid">
-    <div class="row justify-content-md-center">
-        <div class="col-sm-4">
+    <div class="row justify-content-center">
+        <div class="col-12">
 <!------        
             <h5 class="text-uppercase">Social Media</h5>
 -------->
