--- a/Bombay Groove/Index.html
+++ b/Bombay Groove/Index.html
@@ -1,191 +1,251 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Bombay Groove | Bollywood String Quartet</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-</head>
-<body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+  </head>
+  
+  <body>
+    <!-----Navbar------>
 
-<!-----Navbar------>
-
-<div class="navbar-container">
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top navbar-custom">
-  <a class="navbar-brand" href="#">Bombay Groove</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Watch/Listen <span class="sr-only">(watch/listen)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Repertoire<span class="sr-only">(repertoire)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Gallery<span class="sr-only">(gallery)</span></a>
-      </li>
-    </ul>
-    <span class="navbar-text">
-      Contact
-      <span class="sr-only">(contact)</span>
-    </span>
-  </div>
-</nav>
-</div>
-
-<!-----Callout----->
-
-<article class="container-fluid overflow-hidden">
-    <div class="callout-container-fluid">
-        <div class="row">
-            <div class="col-12">
-                <section class="callout jumbotron text-center">
-                    <h1 class="jumbotron-header text-uppercase">Bombay Groove</h1>
-                    <h2 class="jumbotron-subheader">Bollywood String Quartet</h2>
-                </section>
-            </div>
+    <div class="navbar-container">
+      <nav
+        class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top navbar-custom"
+      >
+        <a class="navbar-brand" href="#">Bombay Groove</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarText"
+          aria-controls="navbarText"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#"
+                >Home <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"
+                >Watch/Listen <span class="sr-only">(watch/listen)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"
+                >Repertoire<span class="sr-only">(repertoire)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"
+                >Gallery<span class="sr-only">(gallery)</span></a
+              >
+            </li>
+          </ul>
+          <span class="navbar-text">
+            Contact
+            <span class="sr-only">(contact)</span>
+          </span>
         </div>
+      </nav>
     </div>
 
-<!------./Callout----->
+    <!-----Callout----->
 
-<!------About Us-------->
-<div class="about-us-container">
-    <section class="about-us">
+    <article class="container-fluid overflow-hidden">
+      <div class="callout-container-fluid">
         <div class="row">
+          <div class="col-12">
+            <section class="callout jumbotron text-center">
+              <h1 class="jumbotron-header text-uppercase">Bombay Groove</h1>
+              <h2 class="jumbotron-subheader">Bollywood String Quartet</h2>
+            </section>
+          </div>
+        </div>
+      </div>
+      <!------./Callout----->
+
+      <!------About Us-------->
+      <div class="about-us-container">
+        <section class="about-us">
+          <div class="row">
             <div class="col-12 col-lg-4 d-md-none d-sm-none d-lg-block">
-                <h3 class="about-us-header text-uppercase">Who We Are</h3>
-                    <p>"Lorem ipsum dolor sit amet, consectetur
-                     adipiscing elit, sed do eiusmod tempor incididunt
-                     ut labore et dolore magna aliqua. Ut enim ad minim
-                     veniam, quis nostrud exercitation ullamco laboris 
-                     nisi ut aliquip ex"</p>
+              <h3 class="about-us-header text-uppercase">Who We Are</h3>
+              <p>
+                Thank you for visiting our site. We are Bombay Groove: London’s
+                specialist Bollywood String Quartet. Our group comprises two
+                violinists, a viola player and a ‘cellist, and we have been
+                performing Bollywood and Western music together since 2010. We
+                are all conservatoire-trained professional musicians who perform
+                at the highest level all around the world.
+              </p>
             </div>
 
             <div class="col-12 col-lg-4 col-sm-6">
-                <h3 class="about-us-header text-uppercase">What We Do</h3>
-                    <p>"Lorem ipsum dolor sit amet, consectetur
-                     adipiscing elit, sed do eiusmod tempor incididunt
-                     ut labore et dolore magna aliqua. Ut enim ad minim
-                     veniam, quis nostrud exercitation ullamco laboris 
-                     nisi ut aliquip ex </p>
+              <h3 class="about-us-header text-uppercase">What We Do</h3>
+              <p>
+                We provide beautiful music for your event. As wedding
+                specialists, we are available to play for all parts of the
+                celebration – including the ceremony (religious or civil) and
+                reception. Or, for your engagement or Mehndi party. We’re also
+                available to play at corporate events and other celebrations,
+                and although we’re based in London, UK, we are available to
+                perform worldwide.
+              </p>
             </div>
 
             <div class="col-12 col-lg-4 col-sm-6">
-                <h3 class="about-us-header text-uppercase">Prices</h3>
-                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing
-                     elit, sed do eiusmod tempor incididunt ut labore et dolore
-                     magna aliqua. Ut enim ad minim veniam, quis nostrud 
-                     exercitation ullamco laboris nisi ut aliquip ex </p>
+              <h3 class="about-us-header text-uppercase">Prices</h3>
+              <p>
+                Our prices are dependent on the location of your event, and how
+                long you would like us to play for. However, currently we charge
+                £750 for a two hour set in the Greater London area. Additional
+                hours are £125 per hour. This price includes our own
+                amplification (500 WATTS) and as we are not VAT registered,
+                there is none to pay.
+              </p>
             </div>
-        </div>        
-    </section>
-</div>
-<!------./About Us-------->        
-
-<!-----Showreel----->
-<div class="row justify-content-md-center">
-     <div class="showreel-container col-md-6">   
-        <section class="showreel">
-            <div class="embed-responsive embed-responsive-4by3">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/tmgnp2eT9Mc" alt="Bombay Groove Showreel" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
+          </div>
         </section>
-    </div>    
-</div>
-<!-----/.Showreel----->
-      
-           
-<!-----Quotes----->
-<div class="quotes-container">   
-    <section class="quotes">
-        <div class="row justify-content-center">
+      </div>
+      <!------./About Us-------->
+
+      <!-----Quotes----->
+      <div class="quotes-container">
+        <section class="quotes">
+          <div class="row justify-content-center">
             <h2 class="quotes-header text-uppercase">Quotes</h2>
-                <div class="row"> 
-                    <div class="quote col-12 col-lg-4 col-sm-6">
-                        <p>"We wanted to send a quick thank you to you and the rest of the quartet
-                         for your lovely music which provided the perfect soundtrack to our wedding day. 
-                         You all looked amazing in your colourful sarees and the combination of popular 
-                         uk tracks and Bollywood hits was an ideal fit for the Indian fusion theme. We 
-                         really enjoyed the day, even if it did go by in a flash, and hope you did too. 
-                         Thank you again and best wishes for the future."</p>
-                        <p><strong><em>Mark and Rupa, July 2017.</em></strong></p>
-                    </div> 
+            <div class="row">
+              <div class="quote col-12 col-lg-4 col-sm-6">
+                <p>
+                  "We wanted to send a quick thank you to you and the rest of
+                  the quartet for your lovely music which provided the perfect
+                  soundtrack to our wedding day. You all looked amazing in your
+                  colourful sarees and the combination of popular uk tracks and
+                  Bollywood hits was an ideal fit for the Indian fusion theme.
+                  We really enjoyed the day, even if it did go by in a flash,
+                  and hope you did too. Thank you again and best wishes for the
+                  future."
+                </p>
+                <p>
+                  <strong><em>Mark and Rupa, July 2017.</em></strong>
+                </p>
+              </div>
 
-                        <div class="quote col-12 col-lg-4 col-sm-6">
-                        <p>"Your skill on the instruments is a joy to hear. your professionalism made 
-                        organising so easy. You set the tone. The atmosphere at our wedding was joyous and 
-                        happy and light, and that is in no small part to the pleasure you brought 
-                        all of our guests and us as our big day began. Thank you for charging our 
-                        wedding with a current of love and electricity from the get-go. 
-                        We loved hearing your music, and we love all that you did for us."</p>
-                        <p><strong><em>Mehvish and Shane, April, 2017.</em></strong></p>
-                    </div> 
+              <div class="quote col-12 col-lg-4 col-sm-6">
+                <p>
+                  "Your skill on the instruments is a joy to hear. your
+                  professionalism made organising so easy. You set the tone. The
+                  atmosphere at our wedding was joyous and happy and light, and
+                  that is in no small part to the pleasure you brought all of
+                  our guests and us as our big day began. Thank you for charging
+                  our wedding with a current of love and electricity from the
+                  get-go. We loved hearing your music, and we love all that you
+                  did for us."
+                </p>
+                <p>
+                  <strong><em>Mehvish and Shane, April, 2017.</em></strong>
+                </p>
+              </div>
 
-                    <div class="quote col-12 col-md-4 d-md-none d-sm-none d-lg-block">
-                        <p>Lorem ipsum dolor sit amet, consectetur
-                        adipiscing elit, sed do eiusmod tempor 
-                        incididunt ut labore et dolore magna aliqua. 
-                        Ut enim ad minim veniam, quis nostrud exercitation</p>
-                        <p><strong><em>Katherine and James, November 2019</em></strong></p>
-                    </div>            
-                </div>
+              <div class="quote col-12 col-md-4 d-md-none d-sm-none d-lg-block">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation
+                </p>
+                <p>
+                  <strong><em>Katherine and James, November 2019</em></strong>
+                </p>
+              </div>
             </div>
-    </section>  
-</div>
+          </div>
+        </section>
+      </div>
 
-<!------./Quotes---->
+      <!------./Quotes---->
 
-<footer class="container-fluid">
-    <div class="row justify-content-center">
-        <div class="col-12">
-<!------        
-            <h5 class="text-uppercase">Social Media</h5>
--------->
+      <!------Footer------>
+
+      <footer class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="col-12">
             <ul class="list-inline social-links">
-                <li class="list-inline-item">
-                    <a target="_blank" href="https://www.youtube.com/channel/UCsIssCZNQNK2_3W4ScGxizQ">
-                        <i class="fa fa-youtube" aria-hidden="true"></i>
-                        <span class="sr-only">YouTube</span>
-                    </a>    
-                </li>
-                <li class="list-inline-item">
-                    <a target="_blank" href="https://www.facebook.com/BombayGroove/">
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                        <span class="sr-only">Facebook</span>
-                    </a>    
-                </li>
-                <li class="list-inline-item">
-                    <a target="_blank" href="http://www.twitter.com">
-                        <i class="fa fa-twitter" aria-hidden="true"></i>
-                        <span class="sr-only">Twitter</span>
-                    </a>    
-                </li>
-                <li class="list-inline-item">
-                    <a target="_blank" href="http://www.instagram.com">
-                        <i class="fa fa-instagram" aria-hidden="true"></i>
-                        <span class="sr-only">Instagram</span>
-                    </a>    
-                </li>
-
-
+              <li class="list-inline-item">
+                <a
+                  target="_blank"
+                  href="https://www.youtube.com/channel/UCsIssCZNQNK2_3W4ScGxizQ"
+                >
+                  <i class="fa fa-youtube" aria-hidden="true"></i>
+                  <span class="sr-only">YouTube</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a
+                  target="_blank"
+                  href="https://www.facebook.com/BombayGroove/"
+                >
+                  <i class="fa fa-facebook" aria-hidden="true"></i>
+                  <span class="sr-only">Facebook</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a target="_blank" href="http://www.twitter.com">
+                  <i class="fa fa-twitter" aria-hidden="true"></i>
+                  <span class="sr-only">Twitter</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a target="_blank" href="http://www.instagram.com">
+                  <i class="fa fa-instagram" aria-hidden="true"></i>
+                  <span class="sr-only">Instagram</span>
+                </a>
+              </li>
             </ul>
-        </div>      
-    </div>
-</footer>
+          </div>
+        </div>
+      </footer>    
+
+      <!-----./Footer----->
 
     </article>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>    
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
