Nearly complete landing page (missing 3rd quote). Watch/listen started

--- a/Bombay Groove/Index.html
+++ b/Bombay Groove/Index.html
@@ -64,10 +64,15 @@
                 >Gallery<span class="sr-only">(gallery)</span></a
               >
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"
+                >Contact<span class="sr-only">(contact)</span></a
+              >
+            </li>
           </ul>
           <span class="navbar-text">
-            Contact
-            <span class="sr-only">(contact)</span>
+            Info@BombayGroove.com
+            <span class="sr-only">(Info@BombayGroove.com)</span>
           </span>
         </div>
       </nav>
