--- a/Bombay Groove/watch-listen.html
+++ b/Bombay Groove/watch-listen.html
@@ -73,7 +73,17 @@
       </nav>
     </div>
 
-      <!-----Showreel-----
+<article class="container-fluid">
+     <div class="watch-listen-container">
+        <section class="watch-listen">
+          <div class="row justify-content-center">
+         <!--   <div class="col-12 col-lg-4 d-md-none d-sm-none d-lg-block"> -->
+              <h3 class="watch-listen-header text-uppercase">Watch & Listen</h3>
+            </div>
+          </div>
+        </section>
+     </div> 
+   
 <div class="row justify-content-md-center">
      <div class="showreel-container col-md-6">   
         <section class="showreel">
@@ -83,7 +93,7 @@
         </section>
     </div>    
 </div>
------/.Showreel----->
+
 
       <!------Footer------>
 
