More work on Watch/Listen

--- a/Bombay Groove/watch-listen.html
+++ b/Bombay Groove/watch-listen.html
@@ -66,20 +66,24 @@
             </li>
           </ul>
           <span class="navbar-text">
-            Contact
-            <span class="sr-only">(contact)</span>
+            Info@BombayGroove.com
+            <span class="sr-only">(Info@BombayGroove.com)</span>
           </span>
         </div>
       </nav>
     </div>
 
-<article class="container-fluid">
+<article class="watch-listen-container-fluid">
      <div class="watch-listen-container">
         <section class="watch-listen">
-          <div class="row justify-content-center">
-         <!--   <div class="col-12 col-lg-4 d-md-none d-sm-none d-lg-block"> -->
+          <div class="row justify-content-md-center">
+         <!--- <div class="col-12 col-lg-4 d-md-none d-sm-none d-lg-block"> ---->
+              <div class="col-12">
               <h3 class="watch-listen-header text-uppercase">Watch & Listen</h3>
+              <p class="justify-content-center">Here is a selection of some of our favourite songs. 
+              We hope that you enjoy listening to them.</p>
             </div>
+          </div>
           </div>
         </section>
      </div> 
@@ -88,7 +92,8 @@
      <div class="showreel-container col-md-6">   
         <section class="showreel">
             <div class="embed-responsive embed-responsive-4by3">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/tmgnp2eT9Mc" alt="Bombay Groove Showreel" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/tmgnp2eT9Mc"  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <span class="sr-only">Bombay Groove Showreel</span>
             </div>
         </section>
     </div>    
