watch/listen player with embedded audio

--- a/Bombay Groove/watch-listen.html
+++ b/Bombay Groove/watch-listen.html
@@ -22,7 +22,7 @@
     />
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
   </head>
-  
+
   <body>
     <!-----Navbar------>
 
@@ -73,33 +73,106 @@
       </nav>
     </div>
 
-<article class="watch-listen-container-fluid">
-     <div class="watch-listen-container">
-        <section class="watch-listen">
-          <div class="row justify-content-md-center">
-         <!--- <div class="col-12 col-lg-4 d-md-none d-sm-none d-lg-block"> ---->
-              <div class="col-12">
-              <h3 class="watch-listen-header text-uppercase">Watch & Listen</h3>
-              <p class="justify-content-center">Here is a selection of some of our favourite songs. 
-              We hope that you enjoy listening to them.</p>
+    <article class="watch-listen-container-fluid">
+      <div class="watch-listen-container">
+        <div class="row justify-content-md-center">
+          <div class="col-md-6">
+            <h3 class="watch-listen-header text-uppercase">Watch & Listen</h3>
+          </div>
+        </div>
+
+        <div class="row justify-content-md-center">
+          <div class="showreel-container col-md-6">
+            <section class="showreel">
+              <div class="embed-responsive embed-responsive-4by3">
+                <iframe
+                  class="embed-responsive-item"
+                  src="https://www.youtube.com/embed/tmgnp2eT9Mc"
+                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+                <span class="sr-only">Bombay Groove Showreel</span>
+              </div>
+            </section>
+          </div>
+        </div>
+<br>
+ <!---       <div class="row justify-content-md-center">
+          <div class="audio-container">
+            <div class="col-12 col-lg-4 col-sm-6"> --->
+        <div class="audio-players">   
+            <ul>
+            <li>
+            <iframe
+              width="100%"
+              height="150"
+              align="left"
+              scrolling="no"
+              frameborder="no"
+              allow="autoplay"
+              src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848818366&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
+            ></iframe>
+        
+              <a
+                href="https://soundcloud.com/user-555254094"
+                title="Bombay Groove"
+                target="_blank"
+                style="color: #cccccc; text-decoration: none;"
+                >Bombay Groove</a>
+              <a
+                href="https://soundcloud.com/user-555254094/04-make-you-feel-my-love"
+                title="04 Make You Feel My Love"
+                target="_blank"
+                style="color: #cccccc; text-decoration: none;"
+                >Make You Feel My Love
+                </a>
+             </li>   
+<!---            </div>
+
+       <div class="row justify-content-md-center">
+            <div class="col-12 col-lg-4 col-sm-6"> --->
+            <li>
+            <iframe width="100%" height="150" align="right" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848613004&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+            <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+            <a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> 
+            <a href="https://soundcloud.com/user-555254094/your-song" title="Your Song" target="_blank" style="color: #cccccc; text-decoration: none;">Your Song</a>
+            </div>
+            </li>
+            <li>
+            <iframe width="100%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848608504&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/billie-jean" title="Billie Jean" target="_blank" style="color: #cccccc; text-decoration: none;">Billie Jean</a></div>
+            </li>
+            <li>
+            <iframe width="100%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848606644&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/jar-of-hearts" title="Jar Of Hearts" target="_blank" style="color: #cccccc; text-decoration: none;">Jar Of Hearts</a></div>
+            </li>
+            <li>
+            <iframe width="100%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848606644&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/jar-of-hearts" title="Jar Of Hearts" target="_blank" style="color: #cccccc; text-decoration: none;">Jar Of Hearts</a></div>
+            </li>
+            <li>
+            <iframe width="100%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848594488&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/tum-hi-ho" title="Tum Hi Ho" target="_blank" style="color: #cccccc; text-decoration: none;">Tum Hi Ho</a></div>
+            </li>
+            <li>
+            <iframe width="100%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848605237&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/pehla-nasha" title="Pehla Nasha" target="_blank" style="color: #cccccc; text-decoration: none;">Pehla Nasha</a></div>
+            </li>
+            <li>
+            <iframe width="100%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848599888&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/teri-meri" title="Teri Meri" target="_blank" style="color: #cccccc; text-decoration: none;">Teri Meri</a></div>
+            </li>
+            <li>
+            <iframe width="100%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848591326&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/agar-tum-mil-jao" title="Agar Tum Mil Jao" target="_blank" style="color: #cccccc; text-decoration: none;">Agar Tum Mil Jao</a></div>
+            </li>
+  
+  </ul>   
+
             </div>
           </div>
-          </div>
-        </section>
-     </div> 
-   
-<div class="row justify-content-md-center">
-     <div class="showreel-container col-md-6">   
-        <section class="showreel">
-            <div class="embed-responsive embed-responsive-4by3">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/tmgnp2eT9Mc"  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <span class="sr-only">Bombay Groove Showreel</span>
-            </div>
-        </section>
-    </div>    
+        </div>
+      </div>
+    </div>
 </div>
 
-
+    <audio controls>
+  <source src="assets/audio/jar-of-hearts.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
       <!------Footer------>
 
       <footer class="container-fluid">
@@ -139,10 +212,9 @@
             </ul>
           </div>
         </div>
-      </footer>    
+      </footer>
 
       <!-----./Footer----->
-
     </article>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
