watch/listen page with iframe and soundcloud padding removed

--- a/Bombay Groove/watch-listen.html
+++ b/Bombay Groove/watch-listen.html
@@ -96,14 +96,16 @@
             </section>
           </div>
         </div>
+    </div>
+</article>
 
 <br>
 
-<div class="audio-container">
+<div class="audio-container-fluid">
     <div class="audio-players">   
         <div class="row justify-content-center"> 
             <div class="col-md-4">
-            <ul style="list-style-type:none" style="padding-inline-start-0">
+            <ul style="list-style-type:none padding:0px">
             <li>
             <iframe width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848818366&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/04-make-you-feel-my-love" title="04 Make You Feel My Love" target="_blank" style="color: #cccccc; text-decoration: none;">04 Make You Feel My Love</a></div>
              </li>  
@@ -120,7 +122,7 @@
           </div>
 
           <div  class="col-md-4">
-          <ul style="list-style-type:none"  style="padding-inline-start-0">  
+          <ul style="list-style-type:none">  
             <li>
             <iframe width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848594488&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/tum-hi-ho" title="Tum Hi Ho" target="_blank" style="color: #cccccc; text-decoration: none;">Tum Hi Ho</a></div>
             </li>
@@ -133,10 +135,11 @@
             <li>
             <iframe width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848591326&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/agar-tum-mil-jao" title="Agar Tum Mil Jao" target="_blank" style="color: #cccccc; text-decoration: none;">Agar Tum Mil Jao</a></div>
             </li>
-  
-  </ul>   
+            </ul>   
+        </div>
     </div>
-            </div>
+</div>
+</div>
      
 
       <!------Footer------>
@@ -181,7 +184,7 @@
       </footer>
 
       <!-----./Footer----->
-    </article>
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
