watch/listen complete, landing page complete except for final quote. Header and footer set for other pages

--- a/Bombay Groove/Index.html
+++ b/Bombay Groove/Index.html
@@ -50,7 +50,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="watch-listen.html"
                 >Watch/Listen <span class="sr-only">(watch/listen)</span></a
               >
             </li>
