--- a/Bombay Groove/watch-listen.html
+++ b/Bombay Groove/watch-listen.html
@@ -46,6 +46,9 @@
 					<li class="nav-item">
 						<a class="nav-link" href="#">Gallery<span class="sr-only">(gallery)</span></a>
 					</li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="#">Contact<span class="sr-only">(contact)</span></a>
+                    </li>
 				</ul>
 				<span class="navbar-text">
             Info@BombayGroove.com
