--- a/Bombay Groove/watch-listen.html
+++ b/Bombay Groove/watch-listen.html
@@ -85,7 +85,7 @@
 	<!-----------Audio------------>
 
 	<article class="audio-container-fluid">
-		<div class="watch-listen-container">
+		<div class="watch-listen-container-fluid">
 			<div class="row justify-content-md-center">
 				<div class="col-md-6">
 					<h3 class="watch-listen-header text-uppercase listen">Listen</h3>
