--- a/Bombay Groove/gallery.html
+++ b/Bombay Groove/gallery.html
@@ -45,7 +45,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href=""
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
@@ -77,6 +77,41 @@
         </div>
       </nav>
     </div>
+
+ <!------Gallery------>    
+<article class="container-fluid overflow-hidden">
+      <div class="gallery-container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <section class="callout jumbotron text-center">
+              <h1 class="jumbotron-gallery-header text-uppercase">Gallery</h1>
+            </section>
+          </div>
+        </div>
+      </div>
+
+<div class="row justify-content-center">
+<div class="image-container-fluid">
+    <ul>
+    <li>
+    <img class="d-md-none" src="assets/images/ark-royal-cropped.jpg" alt="Bombay Groove performing on stage in sarees">
+    </li>
+    <li>
+    <img src="assets/images/with-mirror-medium.JPG" alt="Bombay Groove standing near a mirror">
+    </li>
+    <li>
+    <img src="assets/images/mirror-reflection-medium.JPG" alt="Bombay Groove reflected in a mirror">
+    </li>
+    <li>
+    <img src="assets/images/quendon-hall-standing-medium.JPG" alt="Bombay Groove standing outside a stately home">
+    </li>
+    <li>
+    <img src="assets/images/quendon-hall-medium.JPG" alt="Bombay Groove seated by a fountain">
+    </li>
+    </ul>
+</div>
+</div>    
+
 
  <!------Footer------>
 
@@ -120,7 +155,7 @@
       </footer>    
 
       <!-----./Footer----->
-
+</article>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
