--- a/Bombay Groove/index.html
+++ b/Bombay Groove/index.html
@@ -30,7 +30,7 @@
       <nav
         class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top navbar-custom"
       >
-        <a class="navbar-brand" href="#">Bombay Groove</a>
+        <a class="navbar-brand" href="index.html">Bombay Groove</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -45,7 +45,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="index.html"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
@@ -55,17 +55,17 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="repertoire.html"
                 >Repertoire<span class="sr-only">(repertoire)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="gallery.html"
                 >Gallery<span class="sr-only">(gallery)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="contact.html"
                 >Contact<span class="sr-only">(contact)</span></a
               >
             </li>
