--- a/Bombay Groove/gallery.html
+++ b/Bombay Groove/gallery.html
@@ -30,7 +30,7 @@
       <nav
         class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top navbar-custom"
       >
-        <a class="navbar-brand" href="#">Bombay Groove</a>
+        <a class="navbar-brand" href="index.html">Bombay Groove</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -45,27 +45,27 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href=""
+              <a class="nav-link" href="index.html"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="watch-listen.html"
                 >Watch/Listen <span class="sr-only">(watch/listen)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="repertoire.html"
                 >Repertoire<span class="sr-only">(repertoire)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="gallery.html"
                 >Gallery<span class="sr-only">(gallery)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="contact.html"
                 >Contact<span class="sr-only">(contact)</span></a
               >
             </li>
@@ -78,39 +78,51 @@
       </nav>
     </div>
 
- <!------Gallery------>    
+   
 <article class="container-fluid overflow-hidden">
-      <div class="gallery-container-fluid">
+      <div class="gallery-container-fluid ">
         <div class="row">
           <div class="col-12">
             <section class="callout jumbotron text-center">
-              <h1 class="jumbotron-gallery-header text-uppercase">Gallery</h1>
+              <h1 class="jumbotron-header text-uppercase">Gallery</h1>
             </section>
           </div>
         </div>
       </div>
 
-<div class="row justify-content-center">
-<div class="image-container-fluid">
-    <ul>
+<!---
+<article class="container-fluid overflow-hidden">
+      <div class="callout-container-fluid d-sm-none col-md-12">
+        <div class="row">
+          <div class="col-12">
+            <section class="callout jumbotron text-center">
+              <h1 class="jumbotron-header text-uppercase">Gallery</h1>
+              
+            </section>
+          </div>
+        </div>
+      </div>  --->
+<div class="row justify-content-center image-selection">
+<div class="image-container-fluid ">
+    <ul class="photos">
     <li>
-    <img class="d-md-none" src="assets/images/ark-royal-cropped.jpg" alt="Bombay Groove performing on stage in sarees">
+    <img class="img-fluid d-md-none" src="assets/images/ark-royal-cropped.jpg" alt="Bombay Groove performing on stage in sarees">
     </li>
     <li>
-    <img src="assets/images/with-mirror-medium.JPG" alt="Bombay Groove standing near a mirror">
+    <img class="img-fluid" src="assets/images/with-mirror.JPG" alt="Bombay Groove standing near a mirror">
     </li>
     <li>
-    <img src="assets/images/mirror-reflection-medium.JPG" alt="Bombay Groove reflected in a mirror">
+    <img class="img-fluid" src="assets/images/mirror-reflection.JPG" alt="Bombay Groove reflected in a mirror">
     </li>
     <li>
-    <img src="assets/images/quendon-hall-standing-medium.JPG" alt="Bombay Groove standing outside a stately home">
+    <img class="img-fluid" src="assets/images/quendon-hall-standing.JPG" alt="Bombay Groove standing outside a stately home">
     </li>
     <li>
-    <img src="assets/images/quendon-hall-medium.JPG" alt="Bombay Groove seated by a fountain">
+    <img class="img-fluid" src="assets/images/quendon-hall.JPG" alt="Bombay Groove seated by a fountain">
     </li>
     </ul>
 </div>
-</div>    
+</div>
 
 
  <!------Footer------>
@@ -155,7 +167,7 @@
       </footer>    
 
       <!-----./Footer----->
-</article>
+</article> 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
