--- a/Bombay Groove/watch-listen.html
+++ b/Bombay Groove/watch-listen.html
@@ -20,7 +20,7 @@
 
 	<div class="navbar-container">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top navbar-custom">
-			<a class="navbar-brand" href="#">Bombay Groove</a>
+			<a class="navbar-brand" href="index.html">Bombay Groove</a>
 			<button
           class="navbar-toggler"
           type="button"
@@ -35,19 +35,19 @@
 			<div class="collapse navbar-collapse" id="navbarText">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item active">
-						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Watch/Listen <span class="sr-only">(watch/listen)</span></a>
+						<a class="nav-link" href="watch-listen.html">Watch/Listen <span class="sr-only">(watch/listen)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Repertoire<span class="sr-only">(repertoire)</span></a>
+						<a class="nav-link" href="repertoire.html">Repertoire<span class="sr-only">(repertoire)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Gallery<span class="sr-only">(gallery)</span></a>
+						<a class="nav-link" href="gallery.html">Gallery<span class="sr-only">(gallery)</span></a>
 					</li>
                      <li class="nav-item">
-                        <a class="nav-link" href="#">Contact<span class="sr-only">(contact)</span></a>
+                        <a class="nav-link" href="contact.html">Contact<span class="sr-only">(contact)</span></a>
                     </li>
 				</ul>
 				<span class="navbar-text">
