Gallery finished. Working on removing margins from watch/listen

--- a/Bombay Groove/watch-listen.html
+++ b/Bombay Groove/watch-listen.html
@@ -61,14 +61,14 @@
 
 	<article class="watch-listen-container-fluid">
 		<div class="watch-listen-container">
-			<div class="row justify-content-md-center">
+			<div class="row justify-content-md-center watch">
 				<div class="col-md-6">
 					<h3 class="watch-listen-header text-uppercase">Watch</h3>
 				</div>
 			</div>
 
 			<div class="row justify-content-md-center">
-				<div class="showreel-container col-md-6">
+				<div class="showreel-container col-md-6 watch">
 					<section class="showreel">
 						<div class="embed-responsive embed-responsive-4by3">
 							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/tmgnp2eT9Mc"
@@ -87,7 +87,7 @@
 	<article class="audio-container-fluid">
 		<div class="watch-listen-container-fluid">
 			<div class="row justify-content-md-center">
-				<div class="col-md-6">
+				<div class="col-md-6 listen">
 					<h3 class="watch-listen-header text-uppercase listen">Listen</h3>
 				</div>
 			</div>
