Contact page started

--- a/Bombay Groove/gallery.html
+++ b/Bombay Groove/gallery.html
@@ -70,8 +70,8 @@
               >
             </li>
           </ul>
-          <span class="navbar-text">
-            Info@BombayGroove.com
+          <span class="navbar-text"><a href=mailto:info@bombaygroove.com>
+            Info@BombayGroove.com</a>
             <span class="sr-only">(Info@BombayGroove.com)</span>
           </span>
         </div>
