--- a/Bombay Groove/contact.html
+++ b/Bombay Groove/contact.html
@@ -30,7 +30,7 @@
       <nav
         class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top navbar-custom"
       >
-        <a class="navbar-brand" href="#">Bombay Groove</a>
+        <a class="navbar-brand" href="index.html">Bombay Groove</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -45,38 +45,48 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="index.html"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="watch-listen.html"
                 >Watch/Listen <span class="sr-only">(watch/listen)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="repertoire.html"
                 >Repertoire<span class="sr-only">(repertoire)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="gallery.html"
                 >Gallery<span class="sr-only">(gallery)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="contact.html"
                 >Contact<span class="sr-only">(contact)</span></a
               >
             </li>
           </ul>
-          <span class="navbar-text">
-            Info@BombayGroove.com
+          <span class="navbar-text"><a href=mailto:info@bombaygroove.com>
+            Info@BombayGroove.com</a>
             <span class="sr-only">(Info@BombayGroove.com)</span>
           </span>
         </div>
       </nav>
     </div>
+<!-------Contact----->
+
+<div class="contact-us-container-fluid">
+    <div class="row justify-content-center">
+        <div class="col-12">
+            <h1 class="contact-header text-uppercase text-center">Contact</h1>
+                <p></p>
+        </div>   
+    </div>        
+</div>
 
  <!------Footer------>
 
