working on contact page. Trying to eliminate white space at the side of the mobile view

--- a/Bombay Groove/contact.html
+++ b/Bombay Groove/contact.html
@@ -70,7 +70,7 @@
               >
             </li>
           </ul>
-          <span class="navbar-text"><a href=mailto:info@bombaygroove.com>
+          <span class="navbar-text"><a href="mailto:info@bombaygroove.com">
             Info@BombayGroove.com</a>
             <span class="sr-only">(Info@BombayGroove.com)</span>
           </span>
@@ -79,11 +79,25 @@
     </div>
 <!-------Contact----->
 
-<div class="contact-us-container-fluid">
+<div class="container-fluid contact-us-container-fluid">
     <div class="row justify-content-center">
         <div class="col-12">
             <h1 class="contact-header text-uppercase text-center">Contact</h1>
-                <p></p>
+                <p class="contact-paragraph text-center">Please contact us to discuss your requirements.</p>
+                    <div class="contact-details text-center">   
+                        <div class="email"> 
+                            <a href="mailto:info@bombaygroove.com"> 
+                                <i class="fa fa-envelope" style="color:rgba(255, 79, 79, 0.75)"></i>
+                            </a>
+                                <p>Info@BombayGroove.com</p>
+                        </div>
+                        <div class="phone">
+                        <a>
+                            <i class="fa fa-phone fa-lg" style="color:rgba(255, 79, 79, 0.75)"></i>
+                        </a>   
+                     <p>(+44) 0780 313 8891</p>
+                </div>
+            </div>
         </div>   
     </div>        
 </div>
