--- a/Bombay Groove/index.html
+++ b/Bombay Groove/index.html
@@ -70,7 +70,7 @@
               >
             </li>
           </ul>
-          <span class="navbar-text"><a href=mailto:info@bombaygroove.com>
+          <span class="navbar-text"><a href="mailto:info@bombaygroove.com">
             Info@BombayGroove.com</a>
             <span class="sr-only">(Info@BombayGroove.com)</span>
           </span>
@@ -178,12 +178,15 @@
 
               <div class="quote col-12 col-md-4 d-md-none d-sm-none d-lg-block">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation
+                  "Amal and I just wanted to get in touch to say an extra special 
+                  thank you for making our wedding such a wonderful occasion. 
+                  We've heard from many of our guests how lovely the music was, 
+                  and my Dad has said you played a song especially for him, which 
+                  was exceptional. Thank You for being such a wonderful addition to 
+                  our day."
                 </p>
                 <p>
-                  <strong><em>Katherine and James, November 2019</em></strong>
+                  <strong><em>Amal and Neha, July 2017</em></strong>
                 </p>
               </div>
             </div>
