--- a/Bombay Groove/watch-listen.html
+++ b/Bombay Groove/watch-listen.html
@@ -60,7 +60,7 @@
 	<!--------------------Showreel----------------------->
 
 	<article class="watch-listen-container-fluid">
-		<div class="watch-listen-container">
+		<div class="container-fluid watch-listen-container">
 			<div class="row justify-content-md-center watch">
 				<div class="col-md-6">
 					<h3 class="watch-listen-header text-uppercase">Watch</h3>
@@ -84,15 +84,15 @@
 
 	<!-----------Audio------------>
 
-	<article class="audio-container-fluid">
-		<div class="watch-listen-container-fluid">
+	<article class="container-fluid audio-container-fluid">
+		<div class="container-fluid watch-listen-container-fluid">
 			<div class="row justify-content-md-center listen">
 				<div class="col-md-6 listen">
 					<h3 class="watch-listen-header text-uppercase listen">Listen</h3>
 				</div>
 			</div>
 
-			<div class="audio-players">
+			<div class="container-fluid audio-players">
 				<div class="row justify-content-center listen">
 					<div class="col-md-4 listen">
 						<ul style="list-style-type:none padding:0px">
@@ -143,7 +143,8 @@
 							</li>
 						</ul>
 					</div>
-
+                    <div class="container-fluid">
+                    <div class="row">
 					<div class="col-md-4 listen">
 						<ul style="list-style-type:none">
 							<li>
@@ -195,6 +196,8 @@
             	</div>
             </div>
         </div>    
+        </div>
+        </div>
 	</article>
 
 
