white line eliminated on gallery and contact page.

--- a/Bombay Groove/contact.html
+++ b/Bombay Groove/contact.html
@@ -77,9 +77,11 @@
         </div>
       </nav>
     </div>
+    
 <!-------Contact----->
 
-<div class="container-fluid contact-us-container-fluid">
+<article class="container-fluid overflow-hidden">
+<div class="contact-us-container-fluid">
     <div class="row justify-content-center">
         <div class="col-12">
             <h1 class="contact-header text-uppercase text-center">Contact</h1>
@@ -142,7 +144,7 @@
           </div>
         </div>
       </footer>    
-
+</article>
       <!-----./Footer----->
 
   
