--- a/Bombay Groove/watch-listen.html
+++ b/Bombay Groove/watch-listen.html
@@ -58,7 +58,7 @@
 		</nav>
 	</div>
 	<!--------------------Showreel----------------------->
-
+<div class="container-fluid overflow-hidden">
 	<article class="watch-listen-container-fluid">
 		<div class="container-fluid watch-listen-container">
 			<div class="row justify-content-md-center watch">
@@ -84,7 +84,7 @@
 
 	<!-----------Audio------------>
 
-	<article class="container-fluid audio-container-fluid">
+	<article class="container-fluid audio-container-fluid overflow-hidden listen-section">
 		<div class="container-fluid watch-listen-container-fluid">
 			<div class="row justify-content-md-center listen">
 				<div class="col-md-6 listen">
@@ -92,7 +92,7 @@
 				</div>
 			</div>
 
-			<div class="container-fluid audio-players">
+			<div class="container-fluid audio-players overflow-hidden">
 				<div class="row justify-content-center listen">
 					<div class="col-md-4 listen">
 						<ul style="list-style-type:none padding:0px">
@@ -143,8 +143,8 @@
 							</li>
 						</ul>
 					</div>
-                    <div class="container-fluid">
-                    <div class="row">
+                    <div class="container-fluid overflow-hidden">
+                    <div class="row justify-content-center listen">
 					<div class="col-md-4 listen">
 						<ul style="list-style-type:none">
 							<li>
@@ -235,7 +235,7 @@
 			</div>
 		</div>
 	</footer>
-
+</div>
 	<!-----./Footer----->
 
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
