sorted out white line and adjusted footer on contact form

--- a/Bombay Groove/watch-listen.html
+++ b/Bombay Groove/watch-listen.html
@@ -38,7 +38,7 @@
 						<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="watch-listen.html">Watch/Listen <span class="sr-only">(watch/listen)</span></a>
+						<a class="nav-link" href="watch-listen.html">Watch/Listen <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="repertoire.html">Repertoire<span class="sr-only">(repertoire)</span></a>
