--- a/Bombay Groove/gallery.html
+++ b/Bombay Groove/gallery.html
@@ -46,7 +46,7 @@
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="index.html"
-                >Home <span class="sr-only">(current)</span></a
+                >Home <span class="sr-only">(home)</span></a
               >
             </li>
             <li class="nav-item">
@@ -61,7 +61,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="gallery.html"
-                >Gallery<span class="sr-only">(gallery)</span></a
+                >Gallery<span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
